# flet-rive

./: .docstr.yaml  .gitignore  404.html  CHANGELOG.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
changelog/: index.html
docs/: index.md  rive.md
examples/rive_example/: pyproject.toml
examples/rive_example/src/: main.py
license/: index.html
rive/: index.html
search/: search_index.json
src/flet_rive/: rive.py
src/flutter/flet_rive/: pubspec.yaml
src/flutter/flet_rive/lib/src/: rive.dart
