[project]
name = "flet-rive"
version = "0.2.0"
description = "Rive control for Flet"
readme = "README.md"
authors = [
    { name = "Flet contributors", email = "hello@flet.dev" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.9"
dependencies = [
    "flet>=0.70.0",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet.dev/docs/controls/rive/"
Repository = "https://github.com/flet-dev/flet-rive"
Issues = "https://github.com/flet-dev/flet-rive/issues"

[tool.setuptools.package-data]
"flutter.flet_rive" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]>=0.70.0",
]

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
