[project]
name = "flet-rive"
version = "0.2.0"
description = "Rive control for Flet"
readme = "README.md"
authors = [
    { name = "Flet contributors", email = "hello@flet.dev" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.9"
dependencies = [
    "flet",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet.dev/docs/controls/rive/"
Repository = "https://github.com/flet-dev/flet-rive"
Issues = "https://github.com/flet-dev/flet-rive/issues"

[tool.setuptools.package-data]
"flutter.flet_rive" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
    "flet-web",
    #"mkdocs",
    #"mkdocs-material",
    #"mkdocstrings[python]"
]

[tool.uv.sources]
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }
flet-cli = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-cli", rev = "v1" }
flet-desktop = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-desktop", rev = "v1" }
flet-web = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-web", rev = "v1" }

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
