[project]
name = "rive_example"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flet-rive",
    "flet",
]

# Docs: https://flet.dev/docs/publish
[tool.flet]
org = "com.mycompany"
product = "Flet Rive Example"
company = "Flet"
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-rive = "../.."
flet = "git+https://github.com/flet-dev/flet.git@v1#subdirectory=sdk/python/packages/flet"

[tool.uv]
dev-dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
    "flet-web",
]

[tool.uv.sources]
flet-rive = { path = "../../", editable = true }
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }
flet-cli = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-cli", rev = "v1" }
flet-desktop = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-desktop", rev = "v1" }
flet-web = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-web", rev = "v1" }